# WirtualnyEkosystem

./: CMakeLists.txt  Organizm.cpp  Organizm.h  generatorlosowy.cpp  generatorlosowy.h  main.cpp  mieszkaniec.cpp  mieszkaniec.h  nisza.cpp  nisza.h  osobniki.cpp  osobniki.h  sasiedztwo.cpp  sasiedztwo.h  srodowisko.cpp  srodowisko.h  ustawienia.h
